--- a/docs/zh_cn/_static/css/readthedocs.css
+++ b/docs/zh_cn/_static/css/readthedocs.css
@@ -1,14 +1,8 @@
 .header-logo {
-    background-image: url("../image/mmtools-logo.png");
-    background-size: 183px 50px;
-    height: 50px;
-    width: 183px;
-}
-
-@media screen and (min-width: 1100px) {
-    .header-logo {
-        top: -12px;
-    }
+    background-image: url("../image/agentlego-logo.png");
+    background-size: 260px 42px;
+    height: 42px;
+    width: 260px;
 }
 
 pre {
